--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora PWA</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/calculadora/manifest.json">
   <style>
     body, html {
       margin: 0;
