--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     // Registrar el Service Worker
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
+      navigator.serviceWorker.register('/calculadora/service-worker.js')
       .then(registration => {
         console.log('Service Worker registrado con éxito:', registration);
       })
