--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora PWA</title>
-  <link rel="manifest" href="/calculadora/manifest.json">
+  <link rel="manifest" href="manifest.json">
   <style>
     body, html {
       margin: 0;
@@ -27,7 +27,7 @@
 
     // Registrar el Service Worker
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/calculadora/service-worker.js')
+      navigator.serviceWorker.register('service-worker.js')
       .then(registration => {
         console.log('Service Worker registrado con éxito:', registration);
       })
