--- a/index.html
+++ b/index.html
@@ -75,6 +75,30 @@
     // Iniciar
     requestNotificationPermission();
     setInterval(checkForNewOperations, 10000); // Verificar cada 10 segundos
+
+    let deferredPrompt;
+
+window.addEventListener('beforeinstallprompt', (e) => {
+  // Evitar la ventana emergente de instalación predeterminada
+  e.preventDefault();
+  deferredPrompt = e;
+  // Aquí podrías mostrar un botón de instalación personalizado
+});
+
+document.getElementById('installButton').addEventListener('click', () => {
+  if (deferredPrompt) {
+    deferredPrompt.prompt();
+    deferredPrompt.userChoice.then((choiceResult) => {
+      if (choiceResult.outcome === 'accepted') {
+        console.log('El usuario aceptó la instalación');
+      } else {
+        console.log('El usuario rechazó la instalación');
+      }
+      deferredPrompt = null;
+    });
+  }
+});
+
   </script>
 </body>
 </html>
